--- a/index.qmd
+++ b/index.qmd
@@ -86,11 +86,11 @@ Alcohol Use Disorder (AUD) is a chronic, relapsing disease [@mclellanDrugDepende
 
 An automated recovery support system powered by personal sensing and machine learning may assist with the inherently difficult task of identifying when and why someone is at increased risk for lapse. Personal sensing of densely sampled data from individuals' day-to-day lives can provide the inputs necessary for temporally dynamic lapse predictions [@mohrPersonalSensingUnderstanding2017]. Early machine learning models using ecological momentary assessment (EMA) data have achieved excellent accuracy in predicting future lapses back to alcohol use in treatment seeking populations [@chihPredictiveModelingAddiction2014; @wyantMachineLearningModels2024; @wyantForecastingRiskAlcoholunderreview]. 
 
-Despite the high predictive success of EMA, questions remain about the long-term feasibility of a self-report sensing method. EMA has been shown to be well-tolerated among substance use populations over relatively short periods of time [@jonesComplianceEcologicalMomentary2019; @wyantAcceptabilityPersonalSensing2023]. It is unclear whether individuals would be willing and able to adhere to an extensive EMA protocol (e.g., 4 prompts per day) indefinitely. Moreover, EMA items are chosen using domain expertise from decades of research on the self-report factors that predict lapse. It is possible, however, that there are several alternative precipitators of lapse not yet discovered due to small subtle changes in one's environment, social circle, or lifestyle that cannot be easily pinpointed in self-report. 
+Despite the high predictive success of EMA, questions remain about the long-term feasibility of a self-report sensing method. EMA has been shown to be well-tolerated among substance use populations over relatively short periods of time [@jonesComplianceEcologicalMomentary2019; @wyantAcceptabilityPersonalSensing2023]. It is unclear whether individuals would be willing and able to adhere to an extensive EMA protocol (e.g., 4 prompts per day) indefinitely. Moreover, EMA items are chosen using domain expertise from decades of research on the self-report factors that predict lapse. It is possible, however, that there are several alternative precipitators of lapse not yet discovered due to small subtle changes in one's environment, social circle, or lifestyle that cannot be easily identified via self-report. 
 
-Cellular communication sensing may be a promising alternative to EMA. Whereas EMA is limited to, at most, several assessments per day, communication sensing is mostly passive and can be monitored moment-by-moment. Cellular communication patterns appear to capture clear, risk-relevant constructs. Late-night phone calls could indicate an emergency, “drunk dialing,” or interpersonal conflict. A decrease in the number of contacts an individual communicates with could reflect a shrinking social circle, isolation, or disengagement.  Furthermore, cellular communication sensing enables data-driven feature engineering, whereby features are systematically derived from raw communication logs and retained based on their predictive utility rather than a priori theoretical assumptions.
+Cellular communication sensing may be a promising alternative to EMA. Whereas EMA is limited to, at most, several assessments per day, communication sensing is mostly passive and can be monitored moment-by-moment. Cellular communication patterns capture clear, risk-relevant constructs. Late-night phone calls could indicate an emergency, “drunk dialing,” or interpersonal conflict. A decrease in the number of contacts an individual communicates with could reflect a shrinking social circle, isolation, or disengagement.  Furthermore, cellular communication sensing enables data-driven feature engineering, whereby features are systematically derived from raw communication logs and retained based on their predictive utility rather than a priori theoretical assumptions.
 
-These data may become even more powerful when communication patterns are contextualized with participant-specific meaning. For instance, knowing a participant’s relationship to their contacts, whether they have previously drank alcohol with a given contact, or whether that contact supports their recovery goals could substantially alter interpretation. In the examples above, contextualized communication data might reveal that late-night calls are made to a sponsor, or that a shrinking social circle reflects reduced contact with individuals unsupportive of their recovery. In this way, the same communication patterns may reflect protective processes rather than increased lapse risk.
+These data may become even more powerful when communication patterns are contextualized with participant-specific meaning. For instance, knowing a participant’s relationship to their contacts, whether they have previously drunk alcohol with a given contact, or whether that contact supports their recovery goals could alter interpretation. In the examples above, contextualized communication data might reveal that the late-night calls are made to a sponsor, or that a shrinking social circle reflects reduced contact with individuals unsupportive of their recovery. In this way, the same communication patterns may reflect protective processes rather than increased lapse risk.
 
 In this study, we assessed whether contextualized cellular communication features contain clinically meaningful signals for predicting next-day alcohol lapse risk among individuals in early recovery from AUD. Using a machine learning model, we evaluated the predictive utility of these features and identified the most important communication features, with the goal of uncovering new, clinically meaningful predictors of lapse risk.
 
@@ -98,17 +98,17 @@ In this study, we assessed whether contextualized cellular communication feature
 # Methods
 
 ## Transparency and Openness
-We adhere to research transparency principles that are crucial for robust and replicable science. First, we reported how we determined the sample size, all data exclusions, all manipulations, and all study measures. We provide a Transparency Report [@aczelConsensusbasedTransparencyChecklist2019] in the supplement. Second, our features, labels, questionnaires, and other study materials are publicly available on our Open Science Framework (OSF) page ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)). Finally, the annotated analysis scripts are publicly available on our study website ([https://jjcurtin.github.io/study_messages/](https://jjcurtin.github.io/study_messages/)).
+We adhere to research transparency principles that are crucial for robust and replicable science. First, we reported how we determined the sample size, all data exclusions, all manipulations, and all study measures. We provide a transparency checklist [@aczelConsensusbasedTransparencyChecklist2019] in the supplement. Second, our features, labels, questionnaires, and other study materials are publicly available on our Open Science Framework (OSF) page ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)). Finally, the annotated analysis scripts are publicly available on our study website ([https://jjcurtin.github.io/study_messages/](https://jjcurtin.github.io/study_messages/)).
 
 
 ## Participants and Procedure
 We recruited 192 adults in early recovery from AUD in Madison, Wisconsin, through print and digital advertisements and partnerships with treatment centers. This sample size was determined based on traditional power analysis methods for logistic regression [@hsiehSampleSizeTables1989] because comparable approaches for machine learning models have not yet been validated. Eligibility criteria required that participants were age 18 or older, able to read and write in English, had moderate to severe AUD ^[(≥4 self-reported DSM-5 symptoms)], had a goal of abstinence from alcohol at the time of the screening visit, had been abstinent for 1–8 weeks, were willing to use a single smartphone, and were not exhibiting severe psychosis or paranoia.^[Defined as scores >2.2 or 2.8, respectively, on the psychosis or paranoia scales of the Symptom Checklist–90 [@derogatislBriefSymptomInventory].]
 
-Participants completed up to 5 study visits over approximately 3 months: a screening visit, intake visit, and 3 monthly follow-up visits. At screening we determined eligibility and collected demographic information (age, sex at birth, race, ethnicity, education, marital status, employment, and income) and clinical characteristics (DSM-5 AUD symptom count, alcohol problems [@hurlbutAssessingAlcoholProblems1992], and presence of psychological symptoms [@derogatislBriefSymptomInventory]). At the intake visit, roughly two weeks after screening, we collected additional self-report data on abstinence self-efficacy [@mckiernanDevelopmentBriefAbstinence2011], craving [@flanneryPsychometricPropertiesPenn1999], and recent recovery efforts and goals.
+Participants completed up to 5 study visits over approximately 3 months: a screening visit, intake visit, and 3 monthly follow-up visits. At screening we determined eligibility and collected demographic information (age, sex at birth, race, ethnicity, education, marital status, employment, and income) and clinical characteristics (DSM-5 AUD symptom count, alcohol problems [@hurlbutAssessingAlcoholProblems1992], and presence of psychological symptoms [@derogatislBriefSymptomInventory]). At the intake visit, approximately two weeks after screening, we collected additional self-report data on abstinence self-efficacy [@mckiernanDevelopmentBriefAbstinence2011], craving [@flanneryPsychometricPropertiesPenn1999], and recent recovery efforts and goals.
 
-At each monthly follow-up, we downloaded backups of participants' cellular communication metadata directly from their smartphones. Metadata included the phone number of the other party, the date and time of the communication, the origin of call or message (i.e., incoming or outgoing), whether the call was answered (voice calls only), and the duration of the call (voice calls only). During each follow-up visit, study staff identified important contacts. Contacts that participants communicated with at least twice by call or text in the past month were deemed important. For each important contact, participants answered 7 contextual questions about their type of relationship, whether they ever drank alcohol with this person, the drinking status of the contact, expectations about whether the contact would drink in their presence, recovery status of contact, level of supportiveness of contact, and affective experiences with the contact. 
+At each monthly follow-up, we downloaded backups of participants' cellular communication metadata directly from their smartphones. Metadata included the phone number of the other party, the date and time of the communication, the origin of call or message (i.e., incoming or outgoing), whether the call was answered (voice calls only), and the duration of the call (voice calls only). During each follow-up visit, study staff identified important contacts. Contacts that participants communicated with at least twice by call or text in the past month were considered important. For each important contact, participants answered seven contextual questions about their type of relationship, whether they ever drank alcohol with this person, the drinking status of the contact, expectations about whether the contact would drink in their presence, recovery status of contact, level of supportiveness of contact, and affective experiences with the contact. 
 
-While enrolled, participants completed 4 brief daily ecological momentary assessments (7-10 questions). The first item assessed alcohol use (date and time of any unreported drinking episodes). The remaining EMA questions were used as features in other studies [@wyantMachineLearningModels2024; @wyantForecastingRiskAlcoholunderreview], but were outside the scope of this cellular communication sensing study. Additional sensing data streams and self-report measures were collected for the parent grant. Participants were compensated up to \$115 per month for completing study tasks (i.e., EMAs, monthly follow-up visits and sharing sensing data) and were paid \$66 per month to offset the cost of maintaining a cellphone plan. The full study protocol is available on our OSF page ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)). 
+While enrolled, participants completed four brief daily ecological momentary assessments (7-10 questions). The first item assessed alcohol use (date and time of any unreported drinking episodes). The remaining EMA questions were used as features in other studies [@wyantMachineLearningModels2024; @wyantForecastingRiskAlcoholunderreview], but were outside the scope of this cellular communication sensing study. Additional sensing data streams and self-report measures were collected for the parent grant. We compensated participants up to \$115 per month for completing study tasks (i.e., EMAs, monthly follow-up visits and sharing sensing data) and \$66 per month to offset the cost of their cellphone plan. The full study protocol is available on our OSF page ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)). 
 
 ## Data Analysis Plan
 
@@ -138,7 +138,7 @@ The best performing model used an elastic net algorithm. This model was refit on
 # Results
 
 ## Participants
-We screened 192 participants. Of these, 169 enrolled during the intake visit and 154 completed the first follow-up visit. Data from 1 participant was excluded due to drinking multiple times a day every day on study, suggesting they did not have a goal of abstinence. Data from 1 participant was excluded due to evidence of careless responding. Data from 1 participant was excluded due to poor compliance with EMA resulting in questionable lapse labels. Data from 7 participants were excluded due to poor compliance providing communication data (i.e., deleting logs prior to download and/or not providing context information about important contacts). The final analytic sample included 144 participants. @tbl-2 provides the demographic characterization of our sample. 56% of participants reported at least one lapse while on study. 
+We screened 192 participants. Of these, 169 enrolled during the intake visit and 154 completed the first follow-up visit. We excluded data from one participant due to drinking multiple times a day every day on study, suggesting they did not have a goal of abstinence. We excluded data from one participant due to evidence of careless responding. We excluded data from one participant due to poor compliance with EMA resulting in questionable lapse labels. We excluded data from seven participants due to poor compliance providing communication data (i.e., deleting logs prior to the download or not providing context information about important contacts). The final analytic sample included 144 participants. @tbl-2 provides the demographic characterization of our sample. 56% of participants reported at least one lapse while on study. 
 
 {{< embed notebooks/mak_tables.qmd#tbl-2 >}} 
 
@@ -148,7 +148,7 @@ Participants had an average of 26 important contacts (range 2-113) that were con
 ## Model Evaluation
 The median posterior auROC for the full model was `r round(subset(pp_perf, model == "full model")$pp_median, 2)`, with relatively narrow 95% CI ([`r round(subset(pp_perf, model == "full model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "full model")$pp_upper, 2)`]) that did not contain .5. This provides strong evidence that the model is capturing signal in the data. The final model retained 13 features (@fig-1). The top four were baseline measures of abstinence confidence, having a goal of abstinence, abstinence self-efficacy when experiencing negative affect, and craving. Communication frequency with people unaware of the individual's recovery goals also emerged as an important feature associated with increased lapse risk.
 
-We evaluated a comparison model to assess the incremental predictive value of cellular communication features beyond baseline measures. The baseline model retained 5 features and achieved performance nearly identical to the full model (median auROC = `r round(subset(pp_perf, model == "baseline model")$pp_median, 2)`, 95% CI [`r round(subset(pp_perf, model == "baseline model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "baseline model")$pp_upper, 2)`]). The median difference in auROC between the full and baseline models was less than .01, providing no evidence (52% probability) that the full model performed better than the baseline model.
+We evaluated a comparison model to assess the incremental predictive value of cellular communication features beyond baseline measures. The baseline model achieved comparative performance to the full model (median auROC = `r round(subset(pp_perf, model == "baseline model")$pp_median, 2)`, 95% CI [`r round(subset(pp_perf, model == "baseline model")$pp_lower, 2)`, `r round(subset(pp_perf, model == "baseline model")$pp_upper, 2)`]). The median difference in auROC between the full and baseline models was less than .01, providing no evidence (52% probability) that the full model performed better than the baseline model.
 
 <!-- 
 Retained communication features:
@@ -171,9 +171,9 @@ Our model achieved fair performance, with an auROC of `r round(subset(pp_perf, m
 
 Nonetheless, several communication features were retained in the final model with moderately sized coefficients. These included communications with people unaware of the participant's recovery status, non-drinkers, friends, and individuals who were unpleasant to interact with. In contrast, raw counts of calls and text messages and call durations were not retained in the final model. This implies that the quantity of communication may be less informative than the quality and social significance. Future research may benefit from collecting richer contextual data about communication contacts to better understand the social dynamics contributing to lapse risk. 
 
-Even with highly contextualized communication data, however, prediction may be limited by data sparsity. Many participants had few daily communications, and some had extended periods with no recorded interactions at all. Our study design may have further contributed to this limitation. We collected only phone and SMS text communications through the native smartphone app. In recent years, many individuals use private messaging apps (e.g., WhatsApp, Signal) or social media platforms (e.g., Facebook Messenger, Instagram) as their primary communication method [@mcdowellPreferencesAttitudesDigital2025]. Therefore, our dataset likely missed a substantial portion of participants' communications. Notably, the communication features retained in the final model were scored over the longest feature scoring epochs (72 and 168 hours), suggesting that when more data are available (i.e., more communications), these features may be become more important. Future studies could explore whether incorporating communication data from additional platforms yields stronger predictive signal. However, even with improved data collection methods, sparsity may remain a challenge, as some people just don't communicate frequently with others and others use services (e.g., Snapchat) that automaticlaly delete messages.
+Even with highly contextualized communication data, however, prediction may be limited by data sparsity. Many participants had few daily communications, and some had extended periods with no recorded interactions at all. Our study design may have further contributed to this limitation. We collected only phone and SMS text communications through the native smartphone app. In recent years, many individuals use private messaging apps (e.g., WhatsApp, Signal) or social media platforms (e.g., Facebook Messenger, Instagram) as their primary communication method [@mcdowellPreferencesAttitudesDigital2025]. Therefore, our dataset likely missed a substantial portion of participants' communications. Future studies could explore whether incorporating communication data from additional platforms yields stronger predictive signal. However, even with improved data collection methods, sparsity may remain a challenge, as some people may simply not communicate frequently with others and others use services (e.g., Snapchat) that automatically delete messages.
 
-We cannot entirely dismiss the potential value of cellular communication data for risk prediction. For example, researchers have successfully incorporated communication data into models with other sensing data (e.g., accelerometer, geolocation, and device usage) to detect current [@baeDetectingDrinkingEpisodes2017] and predict future [@baeLeveragingMobilePhone2023] heavy drinking episondes in non-treatment seeking young adult populations. It is possible, that in certain populations cellular communications may hold more signal. Young adults may have more frequent communications reducing sparsity concerns. Additionally, non-treatment seeking populations may be less likely to sensor their data (i.e., deleting communications) when the drinking behavior is not at odds with their goals and/or values. However, even in these instances, the unique contribution of cellular communications above and beyond other sensing methods is unclear. Some communication features, such as outgoing call duration and the number of outgoing calls emerged in the top 20 important features for detecting current drinking episodes. Conversely, when predicting future drinking episodes, no communication features appeared in the top 20. Other sensing methods, like geolocation and accelerometer data, appeared to be more robustly important for both detection and prediction. 
+We cannot entirely dismiss the potential value of cellular communication data for risk prediction. For example, researchers have successfully incorporated communication data into models with other sensing data (e.g., accelerometer, geolocation, and device usage) to detect current [@baeDetectingDrinkingEpisodes2017] and predict future [@baeLeveragingMobilePhone2023] heavy drinking episondes in non-treatment seeking young adult populations. It is possible that in certain populations cellular communications may hold more signal. Young adults may have more frequent communication reducing sparsity concerns. Additionally, non-treatment seeking populations may be less likely to sensor their data (i.e., deleting communications) when the drinking behavior is not at odds with their goals and/or values. However, even in these instances, the unique contribution of cellular communications beyond other sensing methods is unclear. Some communication features, such as outgoing call duration and the number of outgoing calls emerged in the top 20 important features for detecting current drinking episodes. Conversely, when predicting future drinking episodes, no communication features appeared in the top 20. Other sensing methods, like geolocation and accelerometer data, appeared to be more robustly important for both detection and prediction. 
 
 Other practical challenges in collecting call and text message data further limit the feasibility of this sensing method. For example, we obtained participants' cellular communication data by downloading backups of their communication logs in person during their monthly follow-up visits. It is possible to collect cellular communication data in real time using apps installed on Android devices. However, Apple heavily restricts apps in its app store from accessing call and text message data, making real-time sensing of communications challenging (if not impossible) for IOS users. We conclude that other forms of social interaction characterization (e.g., engineering time spent with supportive contacts from geolocation data) are more worthwhile to pursue in future research.
 
@@ -192,6 +192,9 @@ All participants provided written informed consent.
 
 ## Consent for Publication
 Not applicable.
+
+## Guarantor
+JJC
 
 ## Declaration of Conflicting Interest
 The authors declared no potential conflicts of interest with respect to the research, authorship, and publication of this article.
