--- a/_manuscript/_tex/messages.bib
+++ b/_manuscript/_tex/messages.bib
@@ -385,6 +385,22 @@
   file = {C:\Users\kpaquette2\Zotero\storage\JDKGM5R8\Collins - 2016 - Associations Between Socioeconomic Factors and Alc.pdf}
 }
 
+@article{collinsTRIPODAIStatementUpdated2024,
+  title = {{{TRIPOD}}+{{AI}} Statement: Updated Guidance for Reporting Clinical Prediction Models That Use Regression or Machine Learning Methods},
+  shorttitle = {{{TRIPOD}}+{{AI}} Statement},
+  author = {Collins, Gary S and Moons, Karel G M and Dhiman, Paula and Riley, Richard D and Beam, Andrew L and Van Calster, Ben and Ghassemi, Marzyeh and Liu, Xiaoxuan and Reitsma, Johannes B and Van Smeden, Maarten and Boulesteix, Anne-Laure and Camaradou, Jennifer Catherine and Celi, Leo Anthony and Denaxas, Spiros and Denniston, Alastair K and Glocker, Ben and Golub, Robert M and Harvey, Hugh and Heinze, Georg and Hoffman, Michael M and Kengne, Andr{\'e} Pascal and Lam, Emily and Lee, Naomi and Loder, Elizabeth W and {Maier-Hein}, Lena and Mateen, Bilal A and McCradden, Melissa D and {Oakden-Rayner}, Lauren and Ordish, Johan and Parnell, Richard and Rose, Sherri and Singh, Karandeep and Wynants, Laure and Logullo, Patricia},
+  year = 2024,
+  month = apr,
+  journal = {BMJ},
+  volume = {385},
+  pages = {e078378},
+  issn = {1756-1833},
+  doi = {10.1136/bmj-2023-078378},
+  urldate = {2025-12-27},
+  langid = {english},
+  file = {C:\Users\kpaquette2\Zotero\storage\W5LLWFJU\Collins et al. - 2024 - TRIPOD+AI statement updated guidance for reportin.pdf}
+}
+
 @article{connorApplicationMachineLearning2007a,
   title = {The {{Application}} of {{Machine Learning Techniques}} as an {{Adjunct}} to {{Clinical Decision Making}} in {{Alcohol Dependence Treatment}}},
   author = {Connor, J. P. and Symons, M. and Feeney, G. F. X. and Young, R. {\relax McD}. and Wiles, J.},
@@ -1973,6 +1989,24 @@
   abstract = {This study examines reasons why people do not seek help for alcohol or drug problems by gender and race/ethnicity using data from the National Epidemiologic Survey on Alcohol and Related Conditions (NESARC), a nationally representative survey. Multivariate models were fit for 3 barriers to seeking help (structural, attitudinal, and readiness for change) for either alcohol or drug problems, controlling for socio-demographic characteristics and problem severity. Predicted probabilities were generated to evaluate gender differences by racial/ethnic subgroups. Over three quarters of the samples endorsed attitudinal barriers related to either alcohol or drug use. Generally, women were less likely to endorse attitudinal barriers for alcohol problems. African Americans and Latina/os were less likely than Whites to endorse attitudinal barriers for alcohol problems, Latina/os were less likely than Whites to endorse readiness for change barriers for alcohol and drug problems, however, African Americans were more likely to endorse structural barriers for alcohol problems. Comparisons within racial/ethnic subgroups by gender revealed more complex findings, although across all racial/ethnic groups women endorsed attitudinal barriers for alcohol problems more than men. Study findings suggest the need to tailor interventions to increase access to help for alcohol and drug problems that take into consideration both attitudinal and structural barriers and how these vary across groups.},
   keywords = {Barriers,Gender,Race/ethnicity,Substance use problems,Treatment seeking},
   file = {C\:\\Users\\kpaquette2\\Zotero\\storage\\F74JZAUS\\Verissimo and Grella - 2017 - Influence of gender and raceethnicity on perceive.pdf;C\:\\Users\\kpaquette2\\Zotero\\storage\\WHGMKV4P\\S0740547216303075.html}
+}
+
+@article{vonelmStrengtheningReportingObservational2008,
+  title = {The {{Strengthening}} the {{Reporting}} of {{Observational Studies}} in {{Epidemiology}} ({{STROBE}}) Statement: Guidelines for Reporting Observational Studies},
+  shorttitle = {The {{Strengthening}} the {{Reporting}} of {{Observational Studies}} in {{Epidemiology}} ({{STROBE}}) Statement},
+  author = {{von Elm}, Erik and Altman, Douglas G. and Egger, Matthias and Pocock, Stuart J. and G{\o}tzsche, Peter C. and Vandenbroucke, Jan P. and {STROBE Initiative}},
+  year = 2008,
+  month = apr,
+  journal = {Journal of Clinical Epidemiology},
+  volume = {61},
+  number = {4},
+  pages = {344--349},
+  issn = {0895-4356},
+  doi = {10.1016/j.jclinepi.2007.11.008},
+  abstract = {Much of biomedical research is observational. The reporting of such research is often inadequate, which hampers the assessment of its strengths and weaknesses and of a study's generalizability. The Strengthening the Reporting of Observational Studies in Epidemiology (STROBE) Initiative developed recommendations on what should be included in an accurate and complete report of an observational study. We defined the scope of the recommendations to cover three main study designs: cohort, case-control, and cross-sectional studies. We convened a 2-day workshop in September 2004, with methodologists, researchers, and journal editors to draft a checklist of items. This list was subsequently revised during several meetings of the coordinating group and in e-mail discussions with the larger group of STROBE contributors, taking into account empirical evidence and methodological considerations. The workshop and the subsequent iterative process of consultation and revision resulted in a checklist of 22 items (the STROBE Statement) that relate to the title, abstract, introduction, methods, results, and discussion sections of articles. Eighteen items are common to all three study designs and four are specific for cohort, case-control, or cross-sectional studies. A detailed Explanation and Elaboration document is published separately and is freely available on the web sites of PLoS Medicine, Annals of Internal Medicine, and Epidemiology. We hope that the STROBE Statement will contribute to improving the quality of reporting of observational studies.},
+  langid = {english},
+  pmid = {18313558},
+  keywords = {Case-Control Studies,Cohort Studies,Consensus,Cross-Sectional Studies,Documentation,Epidemiologic Research Design,Guidelines as Topic,Humans,Information Dissemination,Observation}
 }
 
 @article{vydiswaranAutomateddetectionRiskyAlcohol2024,
