--- a/index.qmd
+++ b/index.qmd
@@ -32,11 +32,7 @@ keywords:
   - Digital Phenotyping
   - Relapse Prevention
 abstract: | 
-  Background: Alcohol Use Disorder (AUD) is a chronic, relapsing disease. An automated recovery support system using personal sensing and machine learning may help identify when individuals are at elevated lapse risk. Cellular communication sensing may detect dynamic changes in lapse risk and can be contextualized with self-reported, risk-relevant information about contacts.
-  Objective: We evaluated a machine learning model predicting next-day alcohol lapse among individuals in early recovery from AUD using contextualized cellular communication data and baseline demographic and AUD characteristics.
-  Methods: A total of 144 participants (49% male; mean age=40; 87% non-Hispanic White) with a goal of abstinence provided cellular communication data and alcohol use reports via a 4x daily EMA for up to three months. Models were trained and evaluated using repeated k-fold cross-validation.
-  Results: The best-performing model used an elastic net algorithm and retained 13 features (median posterior auROC=0.68, 95% Bayesian credible interval (CI; [0.64, 0.71]). A baseline comparison model including only baseline features retained five features and demonstrated nearly identical performance (median auROC=0.68, 95% CI [0.64, 0.71]).
-  Conclusions: Cellular communication data capture some risk-relevant signal for alcohol lapse but do not provide incremental predictive value beyond baseline measures. Several communication features were retained in the final model with moderately sized coefficients, suggesting that aspects of social communication may be important for understanding lapse risk. Although, limitations inherent to cellular communication as a sensing method may outweigh their added value. 
+  Alcohol Use Disorder (AUD) is a chronic, relapsing disease. An automated recovery support system using personal sensing and machine learning may help identify when individuals are at elevated lapse risk. Cellular communication sensing may detect dynamic changes in lapse risk and can be contextualized with self-reported, risk-relevant information about contacts. We evaluated a machine learning model predicting next-day alcohol lapse among individuals in early recovery from AUD using contextualized cellular communication data and baseline demographic and AUD characteristics. A total of 144 participants (49% male; mean age=40; 87% non-Hispanic White) with a goal of abstinence provided cellular communication data and alcohol use reports via a 4x daily EMA for up to three months. Models were trained and evaluated using repeated k-fold cross-validation. The best-performing model used an elastic net algorithm and retained 13 features (median posterior auROC=0.68, 95% Bayesian credible interval (CI; [0.64, 0.71]). A baseline comparison model including only baseline features retained five features and demonstrated nearly identical performance (median auROC=0.68, 95% CI [0.64, 0.71]). Cellular communication data capture some risk-relevant signal for alcohol lapse but do not provide incremental predictive value beyond baseline measures. Several communication features were retained in the final model with moderately sized coefficients, suggesting that aspects of social communication may be important for understanding lapse risk. Although, limitations inherent to cellular communication as a sensing method may outweigh their added value. 
 
 #plain-language-summary: |
   #To be filled in.
@@ -45,7 +41,7 @@ abstract: |
   #- Take away point 2
 date: last-modified
 citeproc: true
-csl: sage-vancouver.csl
+csl: plos-one.csl
 bibliography: messages.bib
 #citation:
   #container-title: To be filled in. 
@@ -55,12 +51,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-<!--
-Target Journal: JMIR Formative Research of Digital Health Brief Communication
 
-
-word count: 2393 
--->
 
 ```{r}
 #| echo: false
@@ -102,13 +93,16 @@ We adhere to research transparency principles that are crucial for robust and re
 
 
 ## Participants and Procedure
-We recruited 192 adults in early recovery from AUD in Madison, Wisconsin, through print and digital advertisements and partnerships with treatment centers. This sample size was determined based on traditional power analysis methods for logistic regression [@hsiehSampleSizeTables1989] because comparable approaches for machine learning models have not yet been validated. Eligibility criteria required that participants were age 18 or older, able to read and write in English, had moderate to severe AUD ^[(≥4 self-reported DSM-5 symptoms)], had a goal of abstinence from alcohol at the time of the screening visit, had been abstinent for 1–8 weeks, were willing to use a single smartphone, and were not exhibiting severe psychosis or paranoia.^[Defined as scores >2.2 or 2.8, respectively, on the psychosis or paranoia scales of the Symptom Checklist–90 [@derogatislBriefSymptomInventory].]
+We recruited 192 adults in early recovery from AUD in Madison, Wisconsin, USA through print and digital advertisements and partnerships with treatment centers from February 15, 2017 through September 19, 2019. This sample size was determined based on traditional power analysis methods for logistic regression [@hsiehSampleSizeTables1989] because comparable approaches for machine learning models have not yet been validated. Eligibility criteria required that participants were age 18 or older, able to read and write in English, had moderate to severe AUD (≥4 self-reported DSM-5 symptoms), had a goal of abstinence from alcohol at the time of the screening visit, had been abstinent for 1–8 weeks, were willing to use a single smartphone, and were not exhibiting severe psychosis or paranoia (defined as scores >2.2 or 2.8, respectively, on the psychosis or paranoia scales of the Symptom Checklist–90 [@derogatislBriefSymptomInventory].)
 
 Participants completed up to 5 study visits over approximately 3 months: a screening visit, intake visit, and 3 monthly follow-up visits. At screening we determined eligibility and collected demographic information (age, sex at birth, race, ethnicity, education, marital status, employment, and income) and clinical characteristics (DSM-5 AUD symptom count, alcohol problems [@hurlbutAssessingAlcoholProblems1992], and presence of psychological symptoms [@derogatislBriefSymptomInventory]). At the intake visit, approximately two weeks after screening, we collected additional self-report data on abstinence self-efficacy [@mckiernanDevelopmentBriefAbstinence2011], craving [@flanneryPsychometricPropertiesPenn1999], and recent recovery efforts and goals.
 
 At each monthly follow-up, we downloaded backups of participants' cellular communication metadata directly from their smartphones. Metadata included the phone number of the other party, the date and time of the communication, the origin of call or message (i.e., incoming or outgoing), whether the call was answered (voice calls only), and the duration of the call (voice calls only). During each follow-up visit, study staff identified important contacts. Contacts that participants communicated with at least twice by call or text in the past month were considered important. For each important contact, participants answered seven contextual questions about their type of relationship, whether they ever drank alcohol with this person, the drinking status of the contact, expectations about whether the contact would drink in their presence, recovery status of contact, level of supportiveness of contact, and affective experiences with the contact. 
 
 While enrolled, participants completed four brief daily ecological momentary assessments (7-10 questions). The first item assessed alcohol use (date and time of any unreported drinking episodes). The remaining EMA questions were used as features in other studies [@wyantMachineLearningModels2024; @wyantForecastingRiskAlcoholunderreview], but were outside the scope of this cellular communication sensing study. Additional sensing data streams and self-report measures were collected for the parent grant. We compensated participants up to \$115 per month for completing study tasks (i.e., EMAs, monthly follow-up visits and sharing sensing data) and \$66 per month to offset the cost of their cellphone plan. The full study protocol is available on our OSF page ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)). 
+
+## Ethics
+All procedures were approved by the University of Wisconsin-Madison Institutional Review Board (Study #2015-0780) and carried out in accordance with the principles of the Declaration of Helsinki. All participants provided written informed consent observed by a research assistant.
 
 ## Data Analysis Plan
 
@@ -129,7 +123,7 @@ The full model included 406 features from cellular communication data plus 24 nu
 ### Model Selection and Evaluation
 Candidate model configurations differed by algorithm (elastic net, random forest, XGBoost), outcome resampling method (i.e., up-sampling and down-sampling of the outcome at ratios ranging from 5:1 to 1:1), and hyperparameter values. The best configuration for each model was selected using 6 repeats of 5-fold cross-validation. Participants were grouped so that all of their data were always in the held-in or held-out fold for a split, but never in both. Our performance metric was area under the receiver operating curve (auROC). Folds were stratified so that all folds contained comparable proportions of individuals who lapsed frequently (i.e., 10+ times).
 
-We evaluated model performance with a Bayesian hierarchical generalized linear model. Posterior distributions with 95% credible intervals (CI) were estimated from the 30 held-out folds using weakly informative, data-dependent priors to regularize and reduce overfitting.^[Residual SD ~ normal(0, exp(2)); intercept (centered predictors) ~ normal(2.3, 1.3); window-width contrasts ~ normal(0, 2.69); covariance ~ decov(1,1,1,1).] Random intercepts were included for repeat and fold (nested within repeat). auROCs were logit-transformed and regressed on model type to estimate the probability that model performances differed systematically. 
+We evaluated model performance with a Bayesian hierarchical generalized linear model. Posterior distributions with 95% credible intervals (CI) were estimated from the 30 held-out folds using weakly informative, data-dependent priors to regularize and reduce overfitting: Residual SD ~ normal(0, exp(2)); intercept (centered predictors) ~ normal(2.3, 1.3); window-width contrasts ~ normal(0, 2.69); covariance ~ decov(1,1,1,1). Random intercepts were included for repeat and fold (nested within repeat). auROCs were logit-transformed and regressed on model type to estimate the probability that model performances differed systematically. 
 
 The best performing model used an elastic net algorithm. This model was refit on the entire data set to identify the most important features. We quantified feature importance by examining the retained features (i.e., coefficient value > 0) in the full model and ordering them by absolute coefficient value. These values provide an estimate of the direction and magnitude of association between each predictor and the outcome, conditional on the other features retained. 
 
@@ -177,32 +171,21 @@ We cannot entirely dismiss the potential value of cellular communication data fo
 
 Other practical challenges in collecting call and text message data further limit the feasibility of this sensing method. For example, we obtained participants' cellular communication data by downloading backups of their communication logs in person during their monthly follow-up visits. It is possible to collect cellular communication data in real time using apps installed on Android devices. However, Apple heavily restricts apps in its app store from accessing call and text message data, making real-time sensing of communications challenging (if not impossible) for IOS users. We conclude that other forms of social interaction characterization (e.g., engineering time spent with supportive contacts from geolocation data) are more worthwhile to pursue in future research.
 
-# Author Contributions
-KW contributed to conceptualization, data curation, formal analysis, methodology, visualization, writing – original draft, and writing - review and editing. CY contributed to conceptualization, data curation, methodology, writing - original draft. JJC contributed to conceptualization, data curation, methadology, writing – review and editing, supervision of analysis, funding acquisition. 
+
 
 # Acknowledgments
 The authors wish to thank Susan E. Wanta for her role as the project administrator.
 
-# Statements and Declarations
-## Ethical Considerations
-All procedures were approved by the University of Wisconsin-Madison Institutional Review Board (Study #2015-0780). 
+# Author Contributions
+KW contributed to conceptualization, data curation, formal analysis, methodology, visualization, writing – original draft, and writing - review and editing. CY contributed to conceptualization, data curation, methodology, writing - original draft. JJC contributed to conceptualization, data curation, methadology, writing – review and editing, supervision of analysis, funding acquisition. 
 
-## Consent to Participate
-All participants provided written informed consent.
-
-## Consent for Publication
-Not applicable.
-
-## Guarantor
-JJC
-
-## Declaration of Conflicting Interest
+# Declaration of Conflicting Interest
 The authors declared no potential conflicts of interest with respect to the research, authorship, and publication of this article.
 
-## Funding
+# Funding
 The authors disclosed receipt of the following financial support for the research, authorship, and publication of this article: This work was supported by the National Institute on Alcohol Abuse and Alcoholism (NIAAA; grant number R01 AA024391 to John J. Curtin) and the National Institute on Drug Abuse (NIDA; grant number R01 DA047315 to John J. Curtin). 
 
-## Data Availability
+# Data Availability
 Our de-identified data, questionnaires, and other study materials are publicly available on our OSF page ([https://osf.io/wgpz9/](https://osf.io/wgpz9/)).
 
 \newpage
